--- a/index.html
+++ b/index.html
@@ -24,36 +24,46 @@
             position: relative;
         }
 
-        /* Top Left Footer */
+        /* Top Left Footer - "Made by Static" */
         .footer {
             position: absolute;
             top: 10px;
             left: 10px;
-            font-size: 24px;
+            font-size: 32px;
             font-weight: bold;
-            color: #ff00ff;
-            animation: rainbow 5s linear infinite;
-            font-family: 'Creepster', cursive; /* Zombie-like font */
+            color: #ffffff;
             z-index: 20;
             pointer-events: none;
+            display: flex;
+            align-items: center;
+            background: rgba(0, 0, 0, 0.5); /* Slight background for contrast */
+            padding: 5px 10px;
+            border-radius: 5px;
         }
 
-        /* Rainbow Animation */
+        /* Rainbow Animation for Each Letter */
+        .rainbow-letter {
+            animation: rainbow 2s infinite;
+            display: inline-block;
+            margin: 0 1px;
+        }
+
         @keyframes rainbow {
             0% { color: red; }
-            16% { color: orange; }
-            33% { color: yellow; }
-            50% { color: green; }
-            66% { color: blue; }
-            83% { color: indigo; }
-            100% { color: violet; }
+            14% { color: orange; }
+            28% { color: yellow; }
+            42% { color: green; }
+            56% { color: blue; }
+            70% { color: indigo; }
+            84% { color: violet; }
+            100% { color: red; }
         }
 
         /* Canvas Styling */
         canvas {
             border: 2px solid #444;
             background: rgba(0, 0, 0, 0.1);
-            margin-top: 60px; /* Space for footer */
+            margin-top: 80px; /* Space for footer */
             width: 90vw;
             max-width: 600px;
             height: 150vw;
@@ -69,7 +79,7 @@
             margin-top: 10px;
             z-index: 10;
         }
-        .score, .money, .highScore {
+        .highScore, .money, .score {
             background: rgba(0, 0, 0, 0.6);
             padding: 10px;
             border-radius: 5px;
@@ -161,12 +171,12 @@
                 flex-direction: column;
                 align-items: center;
             }
-            .score, .money, .highScore {
+            .highScore, .money, .score {
                 margin: 5px 0;
                 width: 100%;
             }
             canvas {
-                margin-top: 80px; /* Increased space for larger footer */
+                margin-top: 100px; /* Increased space for larger footer */
             }
         }
     </style>
@@ -174,9 +184,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Top Left Footer -->
+    <!-- Top Left Footer - "Made by Static" -->
     <div class="footer">
-        <a href="https://sites.google.com/view/staticquasar931" target="_blank">Made by Static</a>
+        <!-- Each letter wrapped in a span for individual animation -->
+        <a href="https://sites.google.com/view/staticquasar931" target="_blank">
+            <span class="rainbow-letter">M</span>
+            <span class="rainbow-letter">a</span>
+            <span class="rainbow-letter">d</span>
+            <span class="rainbow-letter">e</span>
+            <span class="rainbow-letter"> </span>
+            <span class="rainbow-letter">b</span>
+            <span class="rainbow-letter">y</span>
+            <span class="rainbow-letter"> </span>
+            <span class="rainbow-letter">S</span>
+            <span class="rainbow-letter">t</span>
+            <span class="rainbow-letter">a</span>
+            <span class="rainbow-letter">t</span>
+            <span class="rainbow-letter">i</span>
+            <span class="rainbow-letter">c</span>
+        </a>
     </div>
 
     <!-- UI Panel -->
@@ -336,7 +362,7 @@
 
         // Draw Player
         function drawPlayer() {
-            ctx.font = "30px Arial";
+            ctx.font = "40px Arial"; // Increased font size
             ctx.textAlign = "center";
             ctx.textBaseline = "middle";
             ctx.fillText(player.emoji, player.x + player.width / 2, player.y + player.height / 2);
@@ -352,7 +378,7 @@
         // Draw Obstacles
         function drawObstacles() {
             obstacles.forEach(obstacle => {
-                ctx.font = "30px Arial";
+                ctx.font = "40px Arial"; // Increased font size
                 ctx.textAlign = "center";
                 ctx.textBaseline = "middle";
                 ctx.fillText(obstacle.emoji, obstacle.x + obstacle.width / 2, obstacle.y + obstacle.height / 2);
@@ -362,7 +388,7 @@
         // Draw Stars
         function drawStars() {
             stars.forEach(star => {
-                ctx.font = "30px Arial";
+                ctx.font = "40px Arial"; // Increased font size
                 ctx.textAlign = "center";
                 ctx.textBaseline = "middle";
                 ctx.fillText(star.emoji, star.x + star.width / 2, star.y + star.height / 2);
